move title up and fix select positioning on mobile

--- a/css/MainStyleSheet.css
+++ b/css/MainStyleSheet.css
@@ -47,7 +47,7 @@ Body {
 .title {
     position: absolute;
     width: 100%;
-    top: 20%;
+    top: 18%;
 }
 
 .intro {
@@ -127,7 +127,7 @@ Body {
 .sort-container {
     position:absolute;
     height: 20%;
-    width: 40%;
+    width: 45%;
     bottom: 6%;
     right: 0%;
     text-align: right;
